fix: fixed alignments

--- a/editor-components/about/about13/about13.module.scss
+++ b/editor-components/about/about13/about13.module.scss
@@ -105,6 +105,31 @@
       }
     }
   }
+
+  &.no-image {
+    .max-content {
+      .content {
+        .content-inner {
+          &.center {
+            align-items: center !important;
+            text-align: center !important;
+
+            .subtitle,
+            .title,
+            .description {
+              text-align: center !important;
+              margin-left: auto !important;
+              margin-right: auto !important;
+            }
+
+            .buttons-wrapper {
+              justify-content: center !important;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 @container (max-width: #{$composer-tablet-width}) {
